Update HTTP API
